# arxiv-search

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  COST_MATRIX.md  Cargo.toml  LICENSE  README.md  S3_INTEGRATION_GUIDE.md  S3_QUICK_START.md  SEARCH_WORKFLOW.md  SECURITY.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: arxiv.rs  content.rs  error.rs  html.rs  lib.rs  paper.rs  pdf.rs  segmentation.rs  semantic_scholar.rs  tfidf.rs
crates/core/src/ingestion/: mod.rs  s3.rs
crates/core/src/search/: filter.rs  mod.rs  query.rs
crates/native/: Cargo.toml
crates/native/examples/: s3_downloader.rs  search_and_download.rs
crates/native/src/: db.rs  fetch.rs  lib.rs  main.rs  persistence.rs  rate_limit.rs  tool.rs
crates/native/tests/: fallback_integration.rs  integration.rs  stress_tests.rs
crates/worker/: wrangler.toml
crates/worker/src/: lib.rs
datasets/arxiv_mcp_sft/: README.md  arxiv_mcp_sft.jsonl  build_dataset.py
docs/: arxiv_epic_plan.md
docs/agents/: rag_patterns.md  tools.md
docs/prompts/: wave_alpha.md  wave_beta.md
docs/superpowers/plans/: 2026-04-15-arxiv-mcp.md
docs/superpowers/specs/: 2026-04-15-arxiv-mcp-design.md
